@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 Hazelcast Inc.
+ * Copyright 2024 Hazelcast Inc.
  *
  * Licensed under the Hazelcast Community License (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@
 package com.hazelcast.jet.sql.impl.inject;
 
 import com.hazelcast.jet.impl.util.ReflectionUtils;
+import com.hazelcast.nio.serialization.ClassNameFilter;
 import com.hazelcast.sql.impl.QueryException;
 import com.hazelcast.sql.impl.expression.RowValue;
 import com.hazelcast.sql.impl.type.QueryDataType;
@@ -42,8 +43,11 @@ class PojoUpsertTarget implements UpsertTarget {
 
     private Object pojo;
 
-    PojoUpsertTarget(String className, Map<String, String> typeNamesByPaths) {
+    PojoUpsertTarget(String className, Map<String, String> typeNamesByPaths, ClassNameFilter filter) {
         this.clazz = loadClass(className);
+        if (filter != null) {
+            filter.filter(clazz.getName());
+        }
         this.typesByPaths = typeNamesByPaths.entrySet().stream()
                                             .collect(toMap(Entry::getKey, entry -> loadClass(entry.getValue())));
     }
@@ -114,7 +118,7 @@ class PojoUpsertTarget implements UpsertTarget {
     @Override
     public void init() {
         try {
-            pojo = clazz.newInstance();
+            pojo = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw QueryException.error("Unable to instantiate class \"" + clazz.getName() + "\" : "
                     + e.getMessage(), e);
