@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 Hazelcast Inc.
+ * Copyright 2024 Hazelcast Inc.
  *
  * Licensed under the Hazelcast Community License (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,18 +16,24 @@
 
 package com.hazelcast.jet.sql.impl.inject;
 
-import com.google.common.collect.ImmutableMap;
 import com.hazelcast.internal.serialization.InternalSerializationService;
 import com.hazelcast.internal.serialization.impl.DefaultSerializationServiceBuilder;
+import com.hazelcast.spi.impl.NodeEngine;
+import com.hazelcast.sql.impl.expression.ExpressionEvalContext;
 import com.hazelcast.test.HazelcastParallelClassRunner;
 import com.hazelcast.test.annotation.ParallelJVMTest;
 import com.hazelcast.test.annotation.QuickTest;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
+import org.mockito.Answers;
+
+import java.util.Map;
 
 import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 @RunWith(HazelcastParallelClassRunner.class)
 @Category({QuickTest.class, ParallelJVMTest.class})
@@ -36,12 +42,16 @@ public class PojoUpsertTargetDescriptorTest {
     private static final InternalSerializationService SERIALIZATION_SERVICE =
             new DefaultSerializationServiceBuilder().build();
 
+
     @Test
     public void test_create() {
         PojoUpsertTargetDescriptor descriptor = new PojoUpsertTargetDescriptor(Object.class.getName(), emptyMap());
 
+        ExpressionEvalContext evalContextMock = mock(Answers.RETURNS_MOCKS);
+        NodeEngine nodeEngine = mock(Answers.RETURNS_MOCKS);
+        when(evalContextMock.getNodeEngine()).thenReturn(nodeEngine);
         // when
-        UpsertTarget target = descriptor.create(SERIALIZATION_SERVICE);
+        UpsertTarget target = descriptor.create(evalContextMock);
 
         // then
         assertThat(target).isInstanceOf(PojoUpsertTarget.class);
@@ -51,7 +61,7 @@ public class PojoUpsertTargetDescriptorTest {
     public void test_serialization() {
         PojoUpsertTargetDescriptor original = new PojoUpsertTargetDescriptor(
                 "com.hazelcast.class",
-                ImmutableMap.of("field", int.class.getName())
+                Map.of("field", int.class.getName())
         );
 
         // when
