@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 Hazelcast Inc.
+ * Copyright 2024 Hazelcast Inc.
  *
  * Licensed under the Hazelcast Community License (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,35 +16,35 @@
 
 package com.hazelcast.jet.sql.impl.schema;
 
-import com.google.common.collect.ImmutableList;
-import com.hazelcast.config.Config;
 import com.hazelcast.jet.sql.SqlTestSupport;
+import com.hazelcast.map.IMap;
 import com.hazelcast.sql.SqlResult;
 import com.hazelcast.sql.impl.QueryException;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
-import static com.hazelcast.spi.properties.ClusterProperty.SQL_CUSTOM_TYPES_ENABLED;
+import static com.hazelcast.dataconnection.impl.DataConnectionTestUtil.DUMMY_TYPE;
+import static java.util.Collections.emptyList;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.Assert.assertEquals;
 
 public class GetDdlTest extends SqlTestSupport {
     private static final String LE = System.lineSeparator();
 
     @BeforeClass
     public static void beforeClass() throws Exception {
-        Config config = smallInstanceConfig()
-                .setProperty(SQL_CUSTOM_TYPES_ENABLED.getName(), "true");
-
-        initialize(1, config);
+        initializeWithClient(1, null, null);
     }
 
     @Test
     public void when_queryMappingFromRelationNamespace_then_success() {
         createMapping("a", int.class, int.class);
 
-        assertRowsAnyOrder("SELECT GET_DDL('relation', 'a')", ImmutableList.of(
+        assertRowsAnyOrder("SELECT GET_DDL('relation', 'a')", List.of(
                 new Row("CREATE OR REPLACE EXTERNAL MAPPING \"hazelcast\".\"public\".\"a\" EXTERNAL NAME \"a\" (" + LE +
                         "  \"__key\" INTEGER EXTERNAL NAME \"__key\"," + LE +
                         "  \"this\" INTEGER EXTERNAL NAME \"this\"" + LE +
@@ -63,9 +63,9 @@ public class GetDdlTest extends SqlTestSupport {
     @Test
     public void when_queryViewFromRelationNamespace_then_success() {
         createMapping("a", int.class, int.class);
-        instance().getSql().execute("CREATE VIEW v AS SELECT * FROM a");
+        instance().getSql().executeUpdate("CREATE VIEW v AS SELECT * FROM a");
 
-        assertRowsAnyOrder("SELECT GET_DDL('relation', 'v')", ImmutableList.of(
+        assertRowsAnyOrder("SELECT GET_DDL('relation', 'v')", List.of(
                 new Row("CREATE OR REPLACE VIEW \"hazelcast\".\"public\".\"v\" AS" + LE +
                         "SELECT \"a\".\"__key\", \"a\".\"this\"" + LE +
                         "FROM \"hazelcast\".\"public\".\"a\" AS \"a\""))
@@ -79,57 +79,82 @@ public class GetDdlTest extends SqlTestSupport {
                 "  \"b\" INTEGER" + LE +
                 ")" + LE +
                 "OPTIONS (" + LE +
-                "  'format'='portable'," + LE +
-                "  'portableFactoryId'='1'," + LE +
-                "  'portableClassId'='3'," + LE +
-                "  'portableClassVersion'='0'" + LE +
+                "  'typeClass'='foo'" + LE +
                 ")";
 
-        instance().getSql().execute(createTypeQuery);
-        assertRowsAnyOrder("SELECT GET_DDL('relation', 't')", ImmutableList.of(new Row(createTypeQuery)));
+        instance().getSql().executeUpdate(createTypeQuery);
+        assertRowsAnyOrder("SELECT GET_DDL('relation', 't')", List.of(new Row(createTypeQuery)));
+    }
+
+    @Test
+    public void when_queryTypeFromRelationNamespace_withoutFieldsAndOptions_then_success() {
+        String createTypeQuery = "CREATE OR REPLACE TYPE \"hazelcast\".\"public\".\"t\"";
+
+        instance().getSql().executeUpdate(createTypeQuery);
+        assertRowsAnyOrder("SELECT GET_DDL('relation', 't')", List.of(new Row(createTypeQuery)));
     }
 
     @Test
     public void when_queryDataConnectionFromDataConnectionNamespace_then_success() {
         String createDataConnectionQuery = "CREATE OR REPLACE DATA CONNECTION \"hazelcast\".\"public\".\"dl\"" + LE
                 + "TYPE \"dummy\"" + LE + "SHARED";
+        String createDataConnectionQueryFixedType = "CREATE OR REPLACE DATA CONNECTION \"hazelcast\".\"public\".\"dl\"" + LE
+                + "TYPE \"DUMMY\"" + LE + "SHARED";
 
-        instance().getSql().execute(createDataConnectionQuery);
-        assertRowsAnyOrder("SELECT GET_DDL('dataconnection', 'dl')", ImmutableList.of(new Row(createDataConnectionQuery)));
+        instance().getSql().executeUpdate(createDataConnectionQuery);
+        assertRowsAnyOrder("SELECT GET_DDL('dataconnection', 'dl')", List.of(new Row(createDataConnectionQueryFixedType)));
+    }
+
+    @Test
+    public void when_queryDataConnectionWithByKeyPlan_then_success() {
+        createMapping("a", Integer.class, String.class);
+        createDataConnection(instance(), "dl", DUMMY_TYPE, true, Collections.emptyMap());
+        IMap<Object, Object> map = instance().getMap("a");
+        map.put(1, "dl");
+
+        String ddl = "CREATE OR REPLACE DATA CONNECTION \"hazelcast\".\"public\".\"dl\"" + LE
+                + "TYPE \"DUMMY\"" + LE + "SHARED";
+
+        assertRowsAnyOrder("SELECT __key, GET_DDL('dataconnection', this) FROM a WHERE __key = 1",
+                List.of(new Row(1, ddl))
+        );
     }
 
     @Test
     public void when_queryNullNamespace_then_throws() {
-        SqlResult sqlRows = instance().getSql().execute("SELECT GET_DDL(null, 'b')");
-
-        assertThatThrownBy(() -> sqlRows.iterator().next())
-                .hasCauseInstanceOf(QueryException.class)
-                .hasMessageContaining("Namespace must not be null for GET_DDL");
+        try (SqlResult sqlRows = instance().getSql().execute("SELECT GET_DDL(null, 'b')")) {
+            assertThatThrownBy(() -> sqlRows.iterator().next())
+                    .hasCauseInstanceOf(QueryException.class)
+                    .hasMessageContaining("Namespace must not be null for GET_DDL");
+        }
     }
 
     @Test
     public void when_queryNotSupportedNamespace_then_throws() {
-        SqlResult sqlRows = instance().getSql().execute("SELECT GET_DDL('a', 'b')");
+        try (SqlResult sqlRows = instance().getSql().execute("SELECT GET_DDL('a', 'b')")) {
+            assertThatThrownBy(() -> sqlRows.iterator().next())
+                    .hasCauseInstanceOf(QueryException.class)
+                    .hasMessageContaining("Namespace 'a' is not supported.");
+        }
 
-        assertThatThrownBy(() -> sqlRows.iterator().next())
-                .hasCauseInstanceOf(QueryException.class)
-                .hasMessageContaining("Namespace 'a' is not supported.");
     }
 
     @Test
     public void when_queryNullObject_then_throws() {
-        SqlResult sqlRows = instance().getSql().execute("SELECT GET_DDL('relation', NULL)");
-        assertThatThrownBy(() -> sqlRows.iterator().next())
-                .hasCauseInstanceOf(QueryException.class)
-                .hasMessageContaining("Object_name must not be null for GET_DDL");
+        try (SqlResult sqlRows = instance().getSql().execute("SELECT GET_DDL('relation', NULL)")) {
+            assertThatThrownBy(() -> sqlRows.iterator().next())
+                    .hasCauseInstanceOf(QueryException.class)
+                    .hasMessageContaining("Object_name must not be null for GET_DDL");
+        }
     }
 
     @Test
     public void when_queryNonExistingObject_then_throws() {
-        SqlResult sqlRows = instance().getSql().execute("SELECT GET_DDL('relation', 'bbb')");
-        assertThatThrownBy(() -> sqlRows.iterator().next())
-                .hasCauseInstanceOf(QueryException.class)
-                .hasMessageContaining("Object 'bbb' does not exist in namespace 'relation'");
+        try (SqlResult sqlRows = instance().getSql().execute("SELECT GET_DDL('relation', 'bbb')")) {
+            assertThatThrownBy(() -> sqlRows.iterator().next())
+                    .hasCauseInstanceOf(QueryException.class)
+                    .hasMessageContaining("Object 'bbb' does not exist in namespace 'relation'");
+        }
     }
 
     @Test
@@ -137,13 +162,13 @@ public class GetDdlTest extends SqlTestSupport {
         createMapping("a", int.class, int.class);
 
         assertRowsAnyOrder("SELECT SUBSTRING(GET_DDL('relation', 'a') FROM 1 FOR 6)",
-                ImmutableList.of(new Row("CREATE"))
+                List.of(new Row("CREATE"))
         );
 
         assertRowsAnyOrder(
                 "SELECT SUBSTRING(GET_DDL('relation', 'a') FROM 1 FOR 6) " +
                         "|| SUBSTRING(GET_DDL('relation', 'a') FROM 1 FOR 3)",
-                ImmutableList.of(new Row("CREATECRE"))
+                List.of(new Row("CREATECRE"))
         );
     }
 
@@ -153,7 +178,7 @@ public class GetDdlTest extends SqlTestSupport {
 
         assertRowsAnyOrder("SELECT SUBSTRING(GET_DDL('relation', 'a') FROM 1 FOR 6)" +
                         "UNION ALL SELECT SUBSTRING(GET_DDL('relation', 'a') FROM 1 FOR 6)",
-                Arrays.asList(new Row("CREATE"), new Row("CREATE")));
+                List.of(new Row("CREATE"), new Row("CREATE")));
     }
 
     @Test
@@ -162,7 +187,7 @@ public class GetDdlTest extends SqlTestSupport {
         instance().getMap("a").put(1, "a");
 
         assertRowsAnyOrder("SELECT GET_DDL('relation', this) FROM a",
-                ImmutableList.of(new Row(
+                List.of(new Row(
                         "CREATE OR REPLACE EXTERNAL MAPPING \"hazelcast\".\"public\".\"a\" EXTERNAL NAME \"a\" (" + LE +
                                 "  \"__key\" INTEGER EXTERNAL NAME \"__key\"," + LE +
                                 "  \"this\" VARCHAR EXTERNAL NAME \"this\"" + LE +
@@ -175,5 +200,46 @@ public class GetDdlTest extends SqlTestSupport {
                                 "  'valueFormat'='java'," + LE +
                                 "  'valueJavaClass'='java.lang.String'" + LE +
                                 ")")));
+    }
+
+    @Test
+    public void when_queryDdlWithInputInPredicate_then_success() {
+        createMapping("a", int.class, String.class);
+        instance().getMap("a").put(1, "a");
+        assertRowsAnyOrder("SELECT * FROM a WHERE GET_DDL('relation', this) = 'a'", emptyList());
+    }
+
+    @Test
+    public void when_queryDataConnectionWithCreateJob_then_success() {
+        String createDataConnectionQuery = "CREATE OR REPLACE DATA CONNECTION \"hazelcast\".\"public\".\"dl\"" + LE
+                + "TYPE \"dummy\"" + LE + "SHARED";
+        String createDataConnectionQueryFixedType = "CREATE OR REPLACE DATA CONNECTION \"hazelcast\".\"public\".\"dl\"" + LE
+                + "TYPE \"DUMMY\"" + LE + "SHARED";
+        String createJobQuery = "CREATE JOB j AS SINK INTO map "
+                + "SELECT v, v FROM (SELECT GET_DDL('dataconnection', 'dl') AS v)";
+
+        IMap<String, String> map = instance().getMap("map");
+        createMapping("map", String.class, String.class);
+
+        instance().getSql().executeUpdate(createDataConnectionQuery);
+        instance().getSql().executeUpdate(createJobQuery);
+
+        assertEqualsEventually(map::size, 1);
+        assertEquals(map.values().iterator().next(), createDataConnectionQueryFixedType);
+    }
+
+    @Test
+    public void when_updateWithGetDdl_then_success() {
+        createMapping("main", Integer.class, String.class);
+        createMapping("target", Integer.class, String.class);
+        var sql = client().getSql();
+        sql.executeUpdate("INSERT INTO main VALUES(1, 'initial')");
+
+        sql.executeUpdate("UPDATE main SET this = GET_DDL('relation', 'target') WHERE __key < 2");
+
+        try (var result = sql.execute("SELECT * FROM main WHERE __key = 1")) {
+            String ddl = result.stream().findFirst().orElseThrow().getObject("this");
+            assertThat(ddl).startsWith("CREATE OR REPLACE EXTERNAL MAPPING \"hazelcast\".\"public\".\"target\" EXTERNAL NAME \"target\"");
+        }
     }
 }
