@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,10 +18,12 @@ package com.hazelcast.internal.config;
 
 import com.hazelcast.config.Config;
 import com.hazelcast.config.UrlXmlConfig;
+import com.hazelcast.internal.tpcengine.util.OS;
 
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import static com.hazelcast.internal.util.EmptyStatement.ignore;
@@ -86,8 +88,8 @@ public final class ConfigLoader {
 
     private static URL asURL(final String path) {
         try {
-            return new URL(path);
-        } catch (MalformedURLException ignored) {
+            return URI.create(OS.ensureUnixSeparators(path)).toURL();
+        } catch (IllegalArgumentException | MalformedURLException ignored) {
             ignore(ignored);
         }
         return null;
