@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import com.hazelcast.jet.core.AbstractProcessor;
 import com.hazelcast.jet.core.Processor;
 import com.hazelcast.jet.core.ProcessorMetaSupplier;
 import com.hazelcast.jet.core.ProcessorSupplier;
-import org.apache.commons.io.IOUtils;
 import org.example.jet.impl.deployment.ResourceCollector;
 
 import javax.annotation.Nonnull;
@@ -72,7 +71,8 @@ public class TestProcessor extends AbstractProcessor {
         @Override
         public String getEx() throws Exception {
             try (InputStream is = ResourceReader.class.getClassLoader().getResourceAsStream("childfirstclassloader/resource_test.txt")) {
-                return IOUtils.toString(is, UTF_8);
+                assert is != null;
+                return new String(is.readAllBytes(), UTF_8);
             }
         }
     }
