@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -198,7 +198,7 @@ public class RingbufferTest extends HazelcastTestSupport {
         Future<Long> f = clientRingbuffer.addAsync("foo", OVERWRITE).toCompletableFuture();
         Long result = f.get();
 
-        assertEquals(new Long(serverRingbuffer.headSequence()), result);
+        assertEquals(Long.valueOf(serverRingbuffer.headSequence()), result);
         assertEquals("foo", serverRingbuffer.readOne(0));
         assertEquals(0, serverRingbuffer.headSequence());
         assertEquals(0, serverRingbuffer.tailSequence());
@@ -209,7 +209,7 @@ public class RingbufferTest extends HazelcastTestSupport {
         Future<Long> f = clientRingbuffer.addAllAsync(asList("foo", "bar"), OVERWRITE).toCompletableFuture();
         Long result = f.get();
 
-        assertEquals(new Long(serverRingbuffer.tailSequence()), result);
+        assertEquals(Long.valueOf(serverRingbuffer.tailSequence()), result);
         assertEquals("foo", serverRingbuffer.readOne(0));
         assertEquals("bar", serverRingbuffer.readOne(1));
         assertEquals(0, serverRingbuffer.headSequence());
