@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,15 @@
 
 package com.hazelcast.config;
 
-import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Sets;
 import com.hazelcast.config.LoginModuleConfig.LoginModuleUsage;
 import com.hazelcast.config.PermissionConfig.PermissionType;
+import com.hazelcast.config.cp.CPMapConfig;
 import com.hazelcast.config.cp.CPSubsystemConfig;
 import com.hazelcast.config.cp.FencedLockConfig;
 import com.hazelcast.config.cp.RaftAlgorithmConfig;
 import com.hazelcast.config.cp.SemaphoreConfig;
+import com.hazelcast.config.security.AccessControlServiceConfig;
 import com.hazelcast.config.security.KerberosAuthenticationConfig;
 import com.hazelcast.config.security.KerberosIdentityConfig;
 import com.hazelcast.config.security.LdapAuthenticationConfig;
@@ -33,8 +35,9 @@ import com.hazelcast.config.security.TokenIdentityConfig;
 import com.hazelcast.config.tpc.TpcConfig;
 import com.hazelcast.config.tpc.TpcSocketConfig;
 import com.hazelcast.instance.EndpointQualifier;
-import com.hazelcast.internal.nio.IOUtil;
+import com.hazelcast.internal.namespace.ResourceDefinition;
 import com.hazelcast.internal.serialization.impl.compact.CompactTestUtil;
+import com.hazelcast.jet.config.ResourceType;
 import com.hazelcast.memory.Capacity;
 import com.hazelcast.memory.MemoryUnit;
 import com.hazelcast.splitbrainprotection.SplitBrainProtectionOn;
@@ -53,19 +56,23 @@ import org.junit.runner.RunWith;
 
 import java.io.ByteArrayInputStream;
 import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
 import java.io.InputStream;
 import java.io.PrintWriter;
 import java.io.Writer;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.text.MessageFormat;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.hazelcast.config.DynamicConfigurationConfig.DEFAULT_BACKUP_COUNT;
 import static com.hazelcast.config.DynamicConfigurationConfig.DEFAULT_BACKUP_DIR;
@@ -158,7 +165,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         String xml = HAZELCAST_START_TAG
                 + "  <cluster-name>foobar</cluster-name>\n"
                 + HAZELCAST_END_TAG;
-        Writer writer = new PrintWriter(file, "UTF-8");
+        Writer writer = new PrintWriter(file, StandardCharsets.UTF_8);
         writer.write(xml);
         writer.close();
 
@@ -279,6 +286,14 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "          </user>"
                 + "        </simple>"
                 + "      </authentication>"
+                + "      <access-control-service>"
+                + "        <factory-class-name>"
+                + "            com.acme.access.AccessControlServiceFactory"
+                + "        </factory-class-name>"
+                + "        <properties>"
+                + "            <property name='decisionFile'>/opt/acl.xml</property>"
+                + "        </properties>"
+                + "      </access-control-service>"
                 + "    </realm>"
                 + "  </realms>"
                 + "  <member-authentication realm='mr'/>\n"
@@ -380,6 +395,10 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         expectedRoles.add("hazelcast");
         assertEquals(expectedRoles, simpleAuthnCfg.getRoles("test"));
         assertEquals(Boolean.TRUE, simpleAuthnCfg.getSkipRole());
+        AccessControlServiceConfig acs = simpleRealm.getAccessControlServiceConfig();
+        assertNotNull(acs);
+        assertEquals("com.acme.access.AccessControlServiceFactory", acs.getFactoryClassName());
+        assertEquals("/opt/acl.xml", acs.getProperty("decisionFile"));
 
         // client-permission-policy
         PermissionPolicyConfig permissionPolicyConfig = securityConfig.getClientPolicyConfig();
@@ -692,6 +711,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "        </queue-store>"
                 + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>"
                 + "        <merge-policy batch-size=\"23\">CustomMergePolicy</merge-policy>"
+                + "        <user-code-namespace>ns1</user-code-namespace>"
                 + "    </queue>"
                 + HAZELCAST_END_TAG;
 
@@ -704,6 +724,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals(2, queueConfig.getBackupCount());
         assertEquals(1, queueConfig.getAsyncBackupCount());
         assertEquals(1, queueConfig.getEmptyQueueTtl());
+        assertEquals("ns1", queueConfig.getUserCodeNamespace());
 
         MergePolicyConfig mergePolicyConfig = queueConfig.getMergePolicyConfig();
         assertEquals("CustomMergePolicy", mergePolicyConfig.getPolicy());
@@ -741,6 +762,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "            <item-listener include-value=\"false\">com.hazelcast.examples.ItemListener</item-listener>"
                 + "        </item-listeners>"
                 + "        <merge-policy batch-size=\"4223\">PassThroughMergePolicy</merge-policy>"
+                + "        <user-code-namespace>ns1</user-code-namespace>"
                 + "    </list>"
                 + HAZELCAST_END_TAG;
         Config config = buildConfig(xml);
@@ -752,6 +774,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals(2, listConfig.getBackupCount());
         assertEquals(1, listConfig.getAsyncBackupCount());
         assertEquals(1, listConfig.getItemListenerConfigs().size());
+        assertEquals("ns1", listConfig.getUserCodeNamespace());
 
         ItemListenerConfig listenerConfig = listConfig.getItemListenerConfigs().iterator().next();
         assertEquals("com.hazelcast.examples.ItemListener", listenerConfig.getClassName());
@@ -775,6 +798,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "            <item-listener>com.hazelcast.examples.ItemListener</item-listener>"
                 + "        </item-listeners>"
                 + "        <merge-policy batch-size=\"4223\">PassThroughMergePolicy</merge-policy>"
+                + "        <user-code-namespace>ns1</user-code-namespace>"
                 + "    </set>"
                 + HAZELCAST_END_TAG;
         Config config = buildConfig(xml);
@@ -786,6 +810,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals(2, setConfig.getBackupCount());
         assertEquals(1, setConfig.getAsyncBackupCount());
         assertEquals(1, setConfig.getItemListenerConfigs().size());
+        assertEquals("ns1", setConfig.getUserCodeNamespace());
 
         ItemListenerConfig listenerConfig = setConfig.getItemListenerConfigs().iterator().next();
         assertEquals("com.hazelcast.examples.ItemListener", listenerConfig.getClassName());
@@ -797,7 +822,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
 
     @Override
     @Test
-    public void readReliableTopic() {
+    public void readReliableTopicConfig() {
         String xml = HAZELCAST_START_TAG
                 + "    <reliable-topic name=\"custom\">"
                 + "           <read-batch-size>35</read-batch-size>"
@@ -806,6 +831,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "           <message-listeners>"
                 + "               <message-listener>MessageListenerImpl</message-listener>"
                 + "           </message-listeners>"
+                + "           <user-code-namespace>ns1</user-code-namespace>"
                 + "    </reliable-topic>"
                 + HAZELCAST_END_TAG;
 
@@ -816,6 +842,38 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals(35, topicConfig.getReadBatchSize());
         assertFalse(topicConfig.isStatisticsEnabled());
         assertEquals(TopicOverloadPolicy.DISCARD_OLDEST, topicConfig.getTopicOverloadPolicy());
+        assertEquals("ns1", topicConfig.getUserCodeNamespace());
+
+        // checking listener configuration
+        assertEquals(1, topicConfig.getMessageListenerConfigs().size());
+        ListenerConfig listenerConfig = topicConfig.getMessageListenerConfigs().get(0);
+        assertEquals("MessageListenerImpl", listenerConfig.getClassName());
+        assertNull(listenerConfig.getImplementation());
+    }
+
+    @Override
+    @Test
+    public void readTopicConfig() {
+        String xml = HAZELCAST_START_TAG
+                + "    <topic name=\"custom\">"
+                + "           <statistics-enabled>false</statistics-enabled>"
+                + "           <global-ordering-enabled>true</global-ordering-enabled>"
+                + "           <multi-threading-enabled>false</multi-threading-enabled>"
+                + "           <message-listeners>"
+                + "               <message-listener>MessageListenerImpl</message-listener>"
+                + "           </message-listeners>"
+                + "           <user-code-namespace>ns1</user-code-namespace>"
+                + "    </topic>"
+                + HAZELCAST_END_TAG;
+
+        Config config = buildConfig(xml);
+
+        TopicConfig topicConfig = config.getTopicConfig("custom");
+
+        assertTrue(topicConfig.isGlobalOrderingEnabled());
+        assertFalse(topicConfig.isMultiThreadingEnabled());
+        assertFalse(topicConfig.isStatisticsEnabled());
+        assertEquals("ns1", topicConfig.getUserCodeNamespace());
 
         // checking listener configuration
         assertEquals(1, topicConfig.getMessageListenerConfigs().size());
@@ -887,6 +945,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "        </ringbuffer-store>"
                 + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>"
                 + "        <merge-policy batch-size=\"2342\">CustomMergePolicy</merge-policy>"
+                + "        <user-code-namespace>ns1</user-code-namespace>"
                 + "    </ringbuffer>"
                 + HAZELCAST_END_TAG;
         Config config = buildConfig(xml);
@@ -897,6 +956,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals(1, ringbufferConfig.getAsyncBackupCount());
         assertEquals(9, ringbufferConfig.getTimeToLiveSeconds());
         assertEquals(InMemoryFormat.OBJECT, ringbufferConfig.getInMemoryFormat());
+        assertEquals("ns1", ringbufferConfig.getUserCodeNamespace());
 
         RingbufferStoreConfig ringbufferStoreConfig = ringbufferConfig.getRingbufferStoreConfig();
         assertFalse(ringbufferStoreConfig.isEnabled());
@@ -929,7 +989,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertTrue(mcConfig.isConsoleEnabled());
         assertFalse(mcConfig.isDataAccessEnabled());
         assertEquals(2, mcConfig.getTrustedInterfaces().size());
-        assertTrue(mcConfig.getTrustedInterfaces().containsAll(ImmutableSet.of("127.0.0.1", "192.168.1.*")));
+        assertTrue(mcConfig.getTrustedInterfaces().containsAll(Set.of("127.0.0.1", "192.168.1.*")));
     }
 
     @Override
@@ -1796,7 +1856,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals(4, multicastConfig.getMulticastTimeoutSeconds());
         assertEquals(42, multicastConfig.getMulticastTimeToLive());
         assertEquals(2, multicastConfig.getTrustedInterfaces().size());
-        assertTrue(multicastConfig.getTrustedInterfaces().containsAll(ImmutableSet.of("127.0.0.1", "0.0.0.0")));
+        assertTrue(multicastConfig.getTrustedInterfaces().containsAll(Set.of("127.0.0.1", "0.0.0.0")));
     }
 
     @Override
@@ -2124,22 +2184,23 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
     public void testCacheConfig() {
         String xml = HAZELCAST_START_TAG
                 + "    <cache name=\"foobar\">\n"
-                + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>"
-                + "        <key-type class-name=\"java.lang.Object\"/>"
-                + "        <value-type class-name=\"java.lang.Object\"/>"
-                + "        <statistics-enabled>false</statistics-enabled>"
-                + "        <management-enabled>false</management-enabled>"
-                + "        <read-through>true</read-through>"
-                + "        <write-through>true</write-through>"
-                + "        <cache-loader-factory class-name=\"com.example.cache.MyCacheLoaderFactory\"/>"
-                + "        <cache-writer-factory class-name=\"com.example.cache.MyCacheWriterFactory\"/>"
-                + "        <expiry-policy-factory class-name=\"com.example.cache.MyExpirePolicyFactory\"/>"
-                + "        <in-memory-format>BINARY</in-memory-format>"
-                + "        <backup-count>1</backup-count>"
-                + "        <async-backup-count>0</async-backup-count>"
-                + "        <eviction size=\"1000\" max-size-policy=\"ENTRY_COUNT\" eviction-policy=\"LFU\"/>"
-                + "        <merge-policy batch-size=\"111\">LatestAccessMergePolicy</merge-policy>"
-                + "        <disable-per-entry-invalidation-events>true</disable-per-entry-invalidation-events>"
+                + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>\n"
+                + "        <key-type class-name=\"java.lang.Object\"/>\n"
+                + "        <value-type class-name=\"java.lang.Object\"/>\n"
+                + "        <statistics-enabled>false</statistics-enabled>\n"
+                + "        <management-enabled>false</management-enabled>\n"
+                + "        <read-through>true</read-through>\n"
+                + "        <write-through>true</write-through>\n"
+                + "        <cache-loader-factory class-name=\"com.example.cache.MyCacheLoaderFactory\"/>\n"
+                + "        <cache-writer-factory class-name=\"com.example.cache.MyCacheWriterFactory\"/>\n"
+                + "        <expiry-policy-factory class-name=\"com.example.cache.MyExpirePolicyFactory\"/>\n"
+                + "        <in-memory-format>BINARY</in-memory-format>\n"
+                + "        <backup-count>1</backup-count>\n"
+                + "        <async-backup-count>0</async-backup-count>\n"
+                + "        <eviction size=\"1000\" max-size-policy=\"ENTRY_COUNT\" eviction-policy=\"LFU\"/>\n"
+                + "        <merge-policy batch-size=\"111\">LatestAccessMergePolicy</merge-policy>\n"
+                + "        <disable-per-entry-invalidation-events>true</disable-per-entry-invalidation-events>\n"
+                + "        <user-code-namespace>ns1</user-code-namespace>\n"
                 + "        <event-journal enabled=\"true\">\n"
                 + "            <capacity>120</capacity>\n"
                 + "            <time-to-live-seconds>20</time-to-live-seconds>\n"
@@ -2195,6 +2256,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertTrue(cacheConfig.getHotRestartConfig().isFsync());
         assertTrue(cacheConfig.getDataPersistenceConfig().isEnabled());
         assertTrue(cacheConfig.getDataPersistenceConfig().isFsync());
+
         EventJournalConfig journalConfig = cacheConfig.getEventJournalConfig();
         assertTrue(journalConfig.isEnabled());
         assertEquals(120, journalConfig.getCapacity());
@@ -2207,6 +2269,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals("com.example.cache.MyEntryEventFilterFactory", cacheConfig.getCacheEntryListeners().get(0).getCacheEntryEventFilterFactory());
         assertTrue(cacheConfig.getMerkleTreeConfig().isEnabled());
         assertEquals(20, cacheConfig.getMerkleTreeConfig().getDepth());
+        assertEquals("ns1", cacheConfig.getUserCodeNamespace());
     }
 
     @Override
@@ -2218,6 +2281,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>"
                 + "        <statistics-enabled>false</statistics-enabled>"
                 + "        <queue-capacity>0</queue-capacity>"
+                + "        <user-code-namespace>ns1</user-code-namespace>"
                 + "    </executor-service>"
                 + HAZELCAST_END_TAG;
 
@@ -2229,6 +2293,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals("customSplitBrainProtectionRule", executorConfig.getSplitBrainProtectionName());
         assertFalse(executorConfig.isStatisticsEnabled());
         assertEquals(0, executorConfig.getQueueCapacity());
+        assertEquals("ns1", executorConfig.getUserCodeNamespace());
     }
 
     @Override
@@ -2241,6 +2306,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "        <durability>3</durability>\n"
                 + "        <capacity>4</capacity>\n"
                 + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>"
+                + "        <user-code-namespace>ns1</user-code-namespace>"
                 + "    </durable-executor-service>"
                 + HAZELCAST_END_TAG;
 
@@ -2252,6 +2318,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals(3, durableExecutorConfig.getDurability());
         assertEquals(4, durableExecutorConfig.getCapacity());
         assertEquals("customSplitBrainProtectionRule", durableExecutorConfig.getSplitBrainProtectionName());
+        assertEquals("ns1", durableExecutorConfig.getUserCodeNamespace());
         assertFalse(durableExecutorConfig.isStatisticsEnabled());
     }
 
@@ -2266,6 +2333,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "        <capacity>2</capacity>\n"
                 + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>"
                 + "        <merge-policy batch-size='99'>PutIfAbsent</merge-policy>"
+                + "        <user-code-namespace>ns1</user-code-namespace>"
                 + "    </scheduled-executor-service>\n"
                 + HAZELCAST_END_TAG;
 
@@ -2280,6 +2348,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals(99, scheduledExecutorConfig.getMergePolicyConfig().getBatchSize());
         assertEquals("PutIfAbsent", scheduledExecutorConfig.getMergePolicyConfig().getPolicy());
         assertFalse(scheduledExecutorConfig.isStatisticsEnabled());
+        assertEquals("ns1", scheduledExecutorConfig.getUserCodeNamespace());
     }
 
     @Override
@@ -2355,6 +2424,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "            <entry-listener include-value=\"true\" local=\"true\">com.hazelcast.examples.EntryListener</entry-listener>\n"
                 + "          </entry-listeners>"
                 + "        <merge-policy batch-size=\"23\">CustomMergePolicy</merge-policy>"
+                + "        <user-code-namespace>ns1</user-code-namespace>"
                 + "  </multimap>"
                 + HAZELCAST_END_TAG;
 
@@ -2370,6 +2440,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertEquals("com.hazelcast.examples.EntryListener", multiMapConfig.getEntryListenerConfigs().get(0).getClassName());
         assertTrue(multiMapConfig.getEntryListenerConfigs().get(0).isIncludeValue());
         assertTrue(multiMapConfig.getEntryListenerConfigs().get(0).isLocal());
+        assertEquals("ns1", multiMapConfig.getUserCodeNamespace());
 
         MergePolicyConfig mergePolicyConfig = multiMapConfig.getMergePolicyConfig();
         assertEquals("CustomMergePolicy", mergePolicyConfig.getPolicy());
@@ -2387,6 +2458,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "        <statistics-enabled>false</statistics-enabled>\n"
                 + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>\n"
                 + "        <merge-policy batch-size=\"2342\">CustomMergePolicy</merge-policy>\n"
+                + "        <user-code-namespace>ns1</user-code-namespace>\n"
                 + "    </replicatedmap>\n"
                 + HAZELCAST_END_TAG;
 
@@ -2398,6 +2470,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertFalse(replicatedMapConfig.isAsyncFillup());
         assertFalse(replicatedMapConfig.isStatisticsEnabled());
         assertEquals("customSplitBrainProtectionRule", replicatedMapConfig.getSplitBrainProtectionName());
+        assertEquals("ns1", replicatedMapConfig.getUserCodeNamespace());
 
         MergePolicyConfig mergePolicyConfig = replicatedMapConfig.getMergePolicyConfig();
         assertEquals("CustomMergePolicy", mergePolicyConfig.getPolicy());
@@ -2475,16 +2548,17 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
     public void testMapConfig() {
         String xml = HAZELCAST_START_TAG
                 + "    <map name=\"foobar\">\n"
-                + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>"
-                + "        <in-memory-format>BINARY</in-memory-format>"
-                + "        <statistics-enabled>true</statistics-enabled>"
-                + "        <cache-deserialized-values>INDEX-ONLY</cache-deserialized-values>"
-                + "        <backup-count>2</backup-count>"
-                + "        <async-backup-count>1</async-backup-count>"
-                + "        <time-to-live-seconds>42</time-to-live-seconds>"
-                + "        <max-idle-seconds>42</max-idle-seconds>"
-                + "        <eviction eviction-policy=\"RANDOM\" max-size-policy=\"PER_NODE\" size=\"42\"/>"
-                + "        <read-backup-data>true</read-backup-data>"
+                + "        <split-brain-protection-ref>customSplitBrainProtectionRule</split-brain-protection-ref>\n"
+                + "        <in-memory-format>BINARY</in-memory-format>\n"
+                + "        <statistics-enabled>true</statistics-enabled>\n"
+                + "        <cache-deserialized-values>INDEX-ONLY</cache-deserialized-values>\n"
+                + "        <backup-count>2</backup-count>\n"
+                + "        <async-backup-count>1</async-backup-count>\n"
+                + "        <time-to-live-seconds>42</time-to-live-seconds>\n"
+                + "        <max-idle-seconds>42</max-idle-seconds>\n"
+                + "        <eviction eviction-policy=\"RANDOM\" max-size-policy=\"PER_NODE\" size=\"42\"/>\n"
+                + "        <read-backup-data>true</read-backup-data>\n"
+                + "        <user-code-namespace>ns1</user-code-namespace>\n"
                 + "        <merkle-tree enabled=\"true\">\n"
                 + "            <depth>20</depth>\n"
                 + "          </merkle-tree>"
@@ -2578,6 +2652,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertTrue(mapConfig.getHotRestartConfig().isFsync());
         assertTrue(mapConfig.getDataPersistenceConfig().isEnabled());
         assertTrue(mapConfig.getDataPersistenceConfig().isFsync());
+        assertEquals("ns1", mapConfig.getUserCodeNamespace());
 
         EventJournalConfig journalConfig = mapConfig.getEventJournalConfig();
         assertTrue(journalConfig.isEnabled());
@@ -3045,6 +3120,45 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         ClassFilter blackList = javaSerializationFilterConfig.getBlacklist();
         assertNotNull(blackList);
         ClassFilter whiteList = javaSerializationFilterConfig.getWhitelist();
+        assertNotNull(whiteList);
+        assertTrue(whiteList.getClasses().contains("java.lang.String"));
+        assertTrue(whiteList.getClasses().contains("example.Foo"));
+        assertTrue(whiteList.getPackages().contains("com.acme.app"));
+        assertTrue(whiteList.getPackages().contains("com.acme.app.subpkg"));
+        assertTrue(whiteList.getPrefixes().contains("java"));
+        assertTrue(whiteList.getPrefixes().contains("["));
+        assertTrue(blackList.getClasses().contains("com.acme.app.BeanComparator"));
+    }
+
+    @Override
+    @Test
+    public void testJavaReflectionFilter() {
+        String xml = HAZELCAST_START_TAG
+            + "  <sql>\n"
+            + "      <java-reflection-filter defaults-disabled='true'>\n"
+            + "          <whitelist>\n"
+            + "              <class>java.lang.String</class>\n"
+            + "              <class>example.Foo</class>\n"
+            + "              <package>com.acme.app</package>\n"
+            + "              <package>com.acme.app.subpkg</package>\n"
+            + "              <prefix>java</prefix>\n"
+            + "              <prefix>com.hazelcast.</prefix>\n"
+            + "              <prefix>[</prefix>\n"
+            + "          </whitelist>\n"
+            + "          <blacklist>\n"
+            + "              <class>com.acme.app.BeanComparator</class>\n"
+            + "          </blacklist>\n"
+            + "      </java-reflection-filter>\n"
+            + "  </sql>\n"
+            + HAZELCAST_END_TAG;
+
+        Config config = new InMemoryXmlConfig(xml);
+        JavaSerializationFilterConfig javaReflectionFilterConfig
+            = config.getSqlConfig().getJavaReflectionFilterConfig();
+        assertNotNull(javaReflectionFilterConfig);
+        ClassFilter blackList = javaReflectionFilterConfig.getBlacklist();
+        assertNotNull(blackList);
+        ClassFilter whiteList = javaReflectionFilterConfig.getWhitelist();
         assertNotNull(whiteList);
         assertTrue(whiteList.getClasses().contains("java.lang.String"));
         assertTrue(whiteList.getClasses().contains("example.Foo"));
@@ -3775,20 +3889,16 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
 
     @Override
     @Test
-    public void testAllPermissionsCovered() {
-        InputStream xmlResource = XMLConfigBuilderTest.class.getClassLoader().getResourceAsStream("hazelcast-fullconfig.xml");
-        Config config = null;
-        try {
-            config = new XmlConfigBuilder(xmlResource).build();
-        } finally {
-            IOUtil.closeResource(xmlResource);
-        }
-        Set<PermissionType> permTypes = new HashSet<>(Arrays.asList(PermissionType.values()));
-        for (PermissionConfig pc : config.getSecurityConfig().getClientPermissionConfigs()) {
-            permTypes.remove(pc.getType());
-        }
-        assertTrue("All permission types should be listed in hazelcast-fullconfig.xml. Not found ones: " + permTypes,
-                permTypes.isEmpty());
+    public void testAllPermissionsCovered() throws IOException {
+        URL xmlResource = XMLConfigBuilderTest.class.getClassLoader().getResource("hazelcast-fullconfig.xml");
+        Config config = new XmlConfigBuilder(xmlResource).build();
+        Set<PermissionType> allPermissionTypes = Set.of(PermissionType.values());
+        Set<PermissionType> foundPermissionTypes = config.getSecurityConfig().getClientPermissionConfigs().stream()
+                .map(PermissionConfig::getType).collect(Collectors.toSet());
+        Collection<PermissionType> difference = Sets.difference(allPermissionTypes, foundPermissionTypes);
+
+        assertTrue(String.format("All permission types should be listed in %s. Not found ones: %s", xmlResource, difference),
+                difference.isEmpty());
     }
 
     @Override
@@ -3829,6 +3939,7 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + HAZELCAST_END_TAG;
 
         Config config = buildConfig(xml);
+
         MemberAddressProviderConfig memberAddressProviderConfig = config.getNetworkConfig().getMemberAddressProviderConfig();
 
         assertTrue(memberAddressProviderConfig.isEnabled());
@@ -3934,6 +4045,17 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 + "      <lock-acquire-limit>2</lock-acquire-limit>\n"
                 + "    </fenced-lock>\n"
                 + "  </locks>\n"
+                + "  <maps>\n"
+                + "    <map>\n"
+                + "      <name>map1</name>\n"
+                + "      <max-size-mb>1</max-size-mb>\n"
+                + "    </map>\n"
+                + "    <map>\n"
+                + "      <name>map2</name>\n"
+                + "      <max-size-mb>2</max-size-mb>\n"
+                + "    </map>\n"
+                + "  </maps>\n"
+                + "  <map-limit>20</map-limit>\n"
                 + "</cp-subsystem>"
                 + HAZELCAST_END_TAG;
         Config config = new InMemoryXmlConfig(xml);
@@ -3970,6 +4092,15 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
         assertNotNull(lockConfig2);
         assertEquals(1, lockConfig1.getLockAcquireLimit());
         assertEquals(2, lockConfig2.getLockAcquireLimit());
+        CPMapConfig mapConfig1 = cpSubsystemConfig.findCPMapConfig("map1");
+        CPMapConfig mapConfig2 = cpSubsystemConfig.findCPMapConfig("map2");
+        assertNotNull(mapConfig1);
+        assertNotNull(mapConfig2);
+        assertEquals("map1", mapConfig1.getName());
+        assertEquals(1, mapConfig1.getMaxSizeMb());
+        assertEquals("map2", mapConfig2.getName());
+        assertEquals(2, mapConfig2.getMaxSizeMb());
+        assertEquals(20, cpSubsystemConfig.getCPMapLimit());
     }
 
     @Override
@@ -4718,6 +4849,92 @@ public class XMLConfigBuilderTest extends AbstractConfigBuilderTest {
                 new PartitioningAttributeConfig("attr1"),
                 new PartitioningAttributeConfig("attr2")
         );
+    }
+
+    @Override
+    public void testNamespaceConfigs() throws IOException {
+        File tempJar = tempFolder.newFile("tempJar.jar");
+        try (FileOutputStream out = new FileOutputStream(tempJar)) {
+            out.write(new byte[]{0x50, 0x4B, 0x03, 0x04});
+        }
+        File tempJarZip = tempFolder.newFile("tempZip.zip");
+
+        String xml = HAZELCAST_START_TAG
+                + "<user-code-namespaces enabled=\"true\">"
+                + "    <class-filter defaults-disabled=\"true\">\n"
+                + "        <blacklist>\n"
+                + "            <class>com.acme.app.BeanComparator</class>\n"
+                + "        </blacklist>\n"
+                + "        <whitelist>\n"
+                + "            <package>com.acme.app</package>\n"
+                + "            <prefix>com.hazelcast.</prefix>\n"
+                + "        </whitelist>\n"
+                + "    </class-filter>"
+                + "    <namespace name=\"ns1\">"
+                + "        <jar id=\"jarId\">"
+                + "            <url>" + tempJar.toURI().toURL() + "</url>"
+                + "        </jar>"
+                + "        <jars-in-zip id=\"zipId\">"
+                + "            <url>" + tempJarZip.toURI().toURL() + "</url>"
+                + "        </jars-in-zip>"
+                + "    </namespace>"
+                + "    <namespace name=\"ns2\">"
+                + "        <jar id=\"jarId2\">"
+                + "            <url>" + tempJar.toURI().toURL() + "</url>"
+                + "        </jar>"
+                + "    </namespace>"
+                + "</user-code-namespaces>"
+                + HAZELCAST_END_TAG;
+
+
+        final UserCodeNamespacesConfig userCodeNamespacesConfig = buildConfig(xml).getNamespacesConfig();
+        assertThat(userCodeNamespacesConfig.isEnabled()).isTrue();
+        assertThat(userCodeNamespacesConfig.getNamespaceConfigs()).hasSize(2);
+        final UserCodeNamespaceConfig userCodeNamespaceConfig = userCodeNamespacesConfig.getNamespaceConfigs().get("ns1");
+
+        assertNotNull(userCodeNamespaceConfig);
+
+        assertThat(userCodeNamespaceConfig.getName()).isEqualTo("ns1");
+        assertThat(userCodeNamespaceConfig.getResourceConfigs()).hasSize(2);
+
+        //validate NS1 ResourceDefinition contents.
+        Collection<ResourceDefinition> ns1Resources = userCodeNamespaceConfig.getResourceConfigs();
+        assertThat(ns1Resources).hasSize(2);
+        Optional<ResourceDefinition> jarIdResource = ns1Resources.stream().filter(r -> r.id().equals("jarId")).findFirst();
+        assertThat(jarIdResource).isPresent();
+        assertThat(jarIdResource.get().url()).isEqualTo(tempJar.toURI().toURL().toString());
+        assertEquals(ResourceType.JAR, jarIdResource.get().type());
+        //check the bytes[] are equal
+        assertArrayEquals(getTestFileBytes(tempJar), jarIdResource.get().payload());
+        Optional<ResourceDefinition> zipId = ns1Resources.stream().filter(r -> r.id().equals("zipId")).findFirst();
+        assertThat(zipId).isPresent();
+        assertThat(zipId.get().url()).isEqualTo(tempJarZip.toURI().toURL().toString());
+        assertEquals(ResourceType.JARS_IN_ZIP, zipId.get().type());
+        //check the bytes[] are equal
+        assertArrayEquals(getTestFileBytes(tempJarZip), zipId.get().payload());
+        //validate NS2 ResourceDefinition contents.
+        final UserCodeNamespaceConfig userCodeNamespaceConfig2 = userCodeNamespacesConfig.getNamespaceConfigs().get("ns2");
+        assertNotNull(userCodeNamespaceConfig2);
+        assertThat(userCodeNamespaceConfig2.getName()).isEqualTo("ns2");
+        assertThat(userCodeNamespaceConfig2.getResourceConfigs()).hasSize(1);
+        Collection<ResourceDefinition> ns2Resources = userCodeNamespaceConfig2.getResourceConfigs();
+        assertThat(ns2Resources).hasSize(1);
+        Optional<ResourceDefinition> jarId2Resource = ns2Resources.stream().filter(r -> r.id().equals("jarId2")).findFirst();
+        assertThat(jarId2Resource).isPresent();
+        assertThat(jarId2Resource.get().url()).isEqualTo(tempJar.toURI().toURL().toString());
+        assertEquals(ResourceType.JAR, jarId2Resource.get().type());
+        //check the bytes[] are equal
+        assertArrayEquals(getTestFileBytes(tempJar), jarId2Resource.get().payload());
+
+        // Validate filtering config
+        assertNotNull(userCodeNamespacesConfig.getClassFilterConfig());
+        JavaSerializationFilterConfig filterConfig = userCodeNamespacesConfig.getClassFilterConfig();
+        assertTrue(filterConfig.isDefaultsDisabled());
+        assertTrue(filterConfig.getWhitelist().isListed("com.acme.app.FakeClass"));
+        assertTrue(filterConfig.getWhitelist().isListed("com.hazelcast.fake.place.MagicClass"));
+        assertFalse(filterConfig.getWhitelist().isListed("not.in.the.whitelist.ClassName"));
+        assertTrue(filterConfig.getBlacklist().isListed("com.acme.app.BeanComparator"));
+        assertFalse(filterConfig.getBlacklist().isListed("not.in.the.blacklist.ClassName"));
     }
 
     @Override
