@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -32,7 +32,6 @@ import org.junit.rules.TemporaryFolder;
 import org.junit.runner.RunWith;
 
 import java.io.File;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 import static com.hazelcast.test.OverridePropertyRule.set;
@@ -66,7 +65,7 @@ public class InstanceTrackingServerModeTest extends HazelcastTestSupport {
 
         HazelcastMemberStarter.main(new String[]{});
 
-        String actualContents = new String(Files.readAllBytes(tempFile.toPath()), StandardCharsets.UTF_8);
+        String actualContents = Files.readString(tempFile.toPath());
         JsonObject json = Json.parse(actualContents).asObject();
         assertEquals("server", json.getString("mode", ""));
     }
