@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,12 +16,13 @@
 
 package com.hazelcast.jet.core.test;
 
-import com.google.common.collect.ImmutableMap;
 import com.hazelcast.cluster.Address;
 import com.hazelcast.cluster.Cluster;
 import com.hazelcast.cluster.Member;
 import com.hazelcast.core.HazelcastInstance;
 import org.junit.Test;
+
+import java.util.Map;
 
 import static org.junit.Assert.assertArrayEquals;
 import static org.mockito.Mockito.mock;
@@ -34,7 +35,7 @@ public class TestProcessorContextTest {
         Address a0 = new Address("1.2.3.4", 0);
 
         TestProcessorContext c = new TestProcessorContext()
-                .setPartitionAssignment(ImmutableMap.of(a0, new int[]{0, 3, 6}));
+                .setPartitionAssignment(Map.of(a0, new int[]{0, 3, 6}));
 
         HazelcastInstance mockHazelcastInstance = mock(HazelcastInstance.class);
         Cluster mockCluster = mock(Cluster.class);
