@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,18 +18,27 @@ package com.hazelcast.spi.utils;
 
 import com.github.tomakehurst.wiremock.junit.WireMockRule;
 import com.hazelcast.internal.nio.IOUtil;
-import com.hazelcast.internal.util.StringUtil;
 import com.hazelcast.logging.ILogger;
 import com.hazelcast.logging.Logger;
 import com.hazelcast.spi.exception.RestClientException;
 import com.hazelcast.test.HazelcastParallelClassRunner;
 import com.hazelcast.test.annotation.QuickTest;
-
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
+
+import java.io.DataInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.ServerSocket;
+import java.net.Socket;
+import java.net.SocketException;
+import java.net.SocketTimeoutException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
 import static com.github.tomakehurst.wiremock.client.WireMock.equalTo;
@@ -44,17 +53,6 @@ import static java.util.Collections.singletonMap;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-
-import java.io.DataInputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.ServerSocket;
-import java.net.Socket;
-import java.net.SocketException;
-import java.net.SocketTimeoutException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.concurrent.atomic.AtomicBoolean;
 
 @RunWith(HazelcastParallelClassRunner.class)
 @Category({QuickTest.class})
@@ -119,9 +117,8 @@ public class RestClientTest {
             .willReturn(aResponse().withStatus(200).withBody(BODY_RESPONSE)));
 
         // when
-        String result = RestClient.create(String.format("%s%s", address, API_ENDPOINT))
-            .withReadTimeoutSeconds(1200)
-            .withConnectTimeoutSeconds(1200)
+        String result = RestClient.create(String.format("%s%s", address, API_ENDPOINT), 1200)
+            .withRequestTimeoutSeconds(1200)
             .withRetries(1)
             .get()
             .getBody();
@@ -251,10 +248,10 @@ public class RestClientTest {
     private void assertTls13SupportInternal(String caFileName) throws IOException {
         try (Tls13CipherCheckingServer server = new Tls13CipherCheckingServer()) {
             new Thread(server).start();
-            RestClient restClient = RestClient.create("https://127.0.0.1:" + server.getPort());
-            if (caFileName != null) {
-                restClient.withCaCertificates(readFile(caFileName));
-            }
+            RestClient restClient = caFileName != null
+                    ? RestClient.create("https://127.0.0.1:" + server.getPort())
+                    : RestClient.createWithSSL("https://127.0.0.1:" + server.serverSocket.getLocalPort(),
+                    readFile("src/test/resources/kubernetes/ca.crt"));
             try {
                 restClient.get();
             } catch (Exception e) {
@@ -265,7 +262,7 @@ public class RestClientTest {
     }
 
     private String readFile(String fileName) throws IOException {
-        return StringUtil.bytesToString(Files.readAllBytes(Paths.get(fileName)));
+        return Files.readString(Paths.get(fileName));
     }
 
     static final class Tls13CipherCheckingServer implements Runnable, AutoCloseable {
